--- a/demo/src/main/resources/application.properties
+++ b/demo/src/main/resources/application.properties
@@ -2,7 +2,7 @@ spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialec
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.hibernate.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
-spring.datasource.url=jdbc:postgresql://192.168.0.120:5432/tournament
+spring.datasource.url=jdbc:postgresql://db:5432/tournament
 spring.datasource.username=postgres
 spring.datasource.password=postgres
 
